<resources>
    <string name="app_name">Tour Guide</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="intro_city">Varanasi or Banaras, mentioned in the scriptures as Kashi, is less of a city and more of a dreamy experience. It is a paragon of Indian culture, philosophy, traditions and spiritual ethos since times immemorial. It is among the Sapta Puries, meaning seven sacred cities of Ancient India. The city is located on the bank of River Ganga which has two tributaries in the city: Varuna and Assi; hence the name Varanasi. The combination of Kashi – the holy city, Ganga- the sacred river and Shiva- the supreme God, makes Varanasi an immortal destination. Today, Varanasi remains the hub of cultural and holy activities. In the field of learning, especially of Religion, Philosophy, Yoga, Ayurveda, Astrology, Dance and Music, the city is certainly unparalleled. The Banarasi Silk Sarees and Brocades are known worldwide for its elegance. Varanasi is full of surprises abounding every corner; the more one explores it, the more one falls in love with it!</string>
    <string name="shriKasiTemple">Shri Kashi Vishwanath Temple is a major sacred attraction, dedicated to Lord Shiva, the presiding deity of the city. The temple houses a Shivalinga, which is said to be one amongst the twelve Jyotirlinga, the fiery pillar of light, by which Lord Shiva beckoned his divine supremacy, broke through the earth’s crust and gleamed towards the heaven.  The present temple was built by Rani Ahailya Bai Holkar of Indore in the year 1776, however, Shri Kashi Vishwanath Temple was existent even before the present one. About 800 kg of gold being used to cap the spire by Maharaja Ranjit Singh, hence it is also known as the Golden Temple in Varanasi. The temple has been built and re-built several times over the past centuries. The temple derives its name from Kashi, another name for Varanasi. This tirth also finds mention in old religious texts like Skanda Purana. The devotional atmosphere here is almost palpable. For the pilgrim who may have travelled thousand miles, the sanctity of the temple is only heightened by the teeming crowds, chanting of mantras and the continuous ringing of bells. Within the courtyard stands many smaller shrines, and a 2.1 metre high figure of Shiva’s bull, Nandi. The aarti held here is one of the most overwhelming experiences you can have on your trip to Varanasi. </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="temple_category">Temples</string>
    <string name="know_varanasi">Varanasi</string>
    <string name="viswa">Varanasi is known for the temples that give you a chance to bask in the glory of spirituality. Kashi Vishwanath Temple is one of the most famous temples in Varanasi. This one is beautifully settled on the western banks of the River Ganga, this one is among the twelve famous holiest jyotirlingas, if you define them in common words then it would mean the sacred centers of Shiva worship spread all over India. You can find the mention of this ancient Varanasi Shiva temple in the Puranas. This shrine has the main deity as a linga which is beautifully set up on a silver altar. The most amazing aspect of this temple is that it has been destructed and re-constructed many times in history. Also, the temple has never bowed down to the dictates of time and even today it stands gloriously tall in Varanasi. This temple is a main attraction among the devotees and tourists who visit this place in thousands, every day.</string>
    <string name="kaal">Kaal Bhairav is an aggressive form of Lord Shiva and in this temple of Kaal Bhairav, you would find the lord Shiva enshrined and worshipped in this particular strong form of Kaal Bhairav. If you research a bit more on the history of this temple, you will be astonished to find that this temple actually dates back to the mid-17th century and is one of the oldest temples in Varanasi. This temple happens to be one of the oldest Shiva temples in the city.It is said that Kaal Bhairava looks after the city and is regarded as the guardian angel of the city. The people of Varanasi are known to take permission from the deity before they leave Varanasi for whatever reason. As per the folklore, whoever visits Varanasi is supposed to to go to the temple of Kaal Bhairav and take permission from Kaal Bhairav to stay safely in Varanasi. So, in case, you visit Varanasi, you should visit the temple of Kaal Bhairav. In this temple, you will find the deity depicted as a man that has a garland of human skulls around the neck.</string>
    <string name="kund">This Durga Kund Mandir was built in the honor of Goddess Durga, the Durga Kund Temple is right next to a rectangular pond (kund) and thus, it derived its name as Durga Kund Mandir. This temple is also known as Durga Temple or the Monkey Temple and is one of the famous Varanasi temples. You will find this shrine being a magnificent example of the Nagara style of Architecture which is a famous form of Architecture in North India. This red stone temple beautifully features a multi-tiered spire. The construction of this temple was in the 18th century and was done by a Bengali queen and ever since then, this temple has a lot of significance among the devotees all across the nation. Also, like most of the temples in Varanasi, even this one has an intriguing story related to it. The legends claim that this existing Durga idol in the temple is actually not a man-made structure. This idol formed by itself in the temple complex. Hence, it is of extreme significance to most people. So, while you go to Varanasi on a trip, you shouldn’t skip visiting this temple.</string>
    <string name="nepali">This is a Nepali Temple which is based in Varanasi and its uniqueness makes it to top the list of distinct temples in Varanasi. This temple is famous for more than one reason. This temple is also famous by the name of the Kantawala Temple, this temple happens to be the replica of the renowned Pashupatinath Temple in Kathmandu. This temple is dedicated to Lord Shiva. This temple was constructed in 19th-century by the exiled King of Nepal whose name was Rana Bahadur Shah. This temple is built of stone, wood, and terracotta and will showcase the Nepali style of Architecture. You will find the pagodas of the temple being carved out of wood that are truly magical to look at and marvel!
This temple has a unique feature that has sculptures which are similar to the ones that you can find in the Khajuraho Group of Architecture. This temple has also got its name as the moniker of Mini Khajuraho.</string>
    <string name="sankatMochanTemplw">The Sankat Mochan Temple is one of the oldest temples in the city dedicated to Lord Hanuman. It is situated on the banks of Pauranic River Assi. Goswamiji has specifically named the deity "Sankat Mochan" which means reliever from troubles. In the temple, "besan ke laddoo" are served as an offering to Lord Hanuman and his idol is decked with a pleasant marigold flower garland. This temple has the unique distinction of having Lord Hanuman facing his Lord Rama, whom he worshiped with steadfast and selfless devotion. It is said that Tulsidas wrote Ramcharitmanas here. According to Hindu mythology, one who visits the Sankat Mochan temple regularly gets their wishes fulfilled. It is considered that the temple was built from the time when Goswami Tulsidas had a vision of the Lord Hanuman. The temple was established by the great saint Goswami Tulsidas.</string>
    <string name="assi_ghat_temple">According to the ancient history, it is said that the Goddess Durga (consort of the Lord Shiva) had thrown her sword in the river (called Assi River) after killing the demon Shumbha-Nishumbha. Assi Ghat is described in the Kashi Khand as “Assi Saimbeda Tirtha” means the one who gets a dip here once in his life will get punya (blessings) of all the Tirthas (religious places of the Hindu). Generally Hindu pilgrims gather to take a holy dip here in the Chaitra (month of March/April) and Magh (month of Jan/Feb) as well as some other significant events like solar/lunar eclipse, Probodhoni Ekadashi and Makar Sankranti. At this Ghat, a huge Shiva lingam is situated under the Peepal tree where pilgrims offer Jal and worship after taking holy bath in the Ganga water. Another Shiva Lingam is - Asisangameshwar lingam, in a small temple of the marble near to the Assi Ghat. The Ghat has been also described in the ancient Hindu literatures like the Matsya purana, Kurma purana, Padma Purana, Agni purana and Kashi khanda.</string>
    <string name="aalo">Aloo Kachori is a slight variation of the Kachori Sabji. Here the normal kachoris are stuffed with real spicy potato fillings and instead of sabji, they are be taken with chutneys. One of the best Aloo Kachoris is served at Shri Madhur Jalpan Sweet shop, Godowlia.</string>
    <string name="jalebi">Do not make Republic Days and Independence Days, the only days to indulge in this heavenly dessert. When in Varanasi, all days are Cheat days. Another of the best things that Madhur Jalpan has to offer is this Desi Ghee wale jalebi. Succulent, crispy, juicy and hot- it has got all things that will make you crave for more and more.</string>
    <string name="baati">This is another widely loved food of Bihar and U.P. Though there are a lot of street side stalls selling the mashed balls of boiled potatoes, tomatoes, and baked brinjals, an authentic taste of the dish can be experienced in the Baati Chokkha Restaurant at Teliyabagh. Do give it a definite try.</string>
    <string name="chaat">Besides the famous Deena Chaat Bhandar and Kashi Chaat Bhandar, there are quite a number of road-side stalls at Lahurabir Road, that offer you with an out of the world Chaat experience. Adding just the right amount of spices and masalas and garnishing it with a sweet chutney, the makers of this Banarasi cuisine will definitely succeed in holding your attention, for quite a long time, like the Masaledar saas-bahu serials of Hindi channels.</string>
    <string name="golgappe">There won’t be a single sane person saying a No to this. Of course, there are Chaat shops like Deena and Kashi Chaat Bhandar selling the best of Banaras ke Golgappe. But if you are anywhere near Maldahiya, do try out the golgappas from the stall right outside Vishal Mega mart- they are simply out of the world.</string>
    <string name="thandai">Banaras aake thandai nahi piye, toh kya kiye. Thandai’s are one of those things, Varanasi is really famous for. Do come here and grab a glass at Godowlia. The lip-smacking delight is found at its best in Baba Thandai and Kashi Vishwanath Thandai Ghar.</string>
    <string name="dahi">Unlike the common Dahi Badas found all across the country, Varanasi’s Dahi Badas consist of Badas made of Chhena( boiling of milk and then curdling it with whey). In contrast to Laung Lata, which give you a spicy and sweet feeling at a single time, Banarasi Chhena Dahi Badas give you a taste of the sweet and sour at the same time.</string>
    <string name="chicken">At a pocket pinch of just Rs 60, Dalmandi at Godowlia, can offer you with a delicious treat of Rotis and grilled chicken kebabs (4-6 pieces). Worried about the taste? Well, in that case, be informed that it tastes absolutely Mamma-mia!!</string>
    <string name="Architecture_location">Architecture location</string>
    <string name="about_Architecture">about Architecture</string>
    <string name="restaurant_name">restaurant name</string>
    <string name="restaurant_location">restaurant location</string>
    <string name="about_restaurant">about restaurant</string>
    <string name="restaurant_time">restaurant time</string>
    <string name="architecture_name">architecture name</string>
</resources>