<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4C77B"
    tools:context=".RestaurantDetailActivity">

    <LinearLayout style="@style/detailActivityLinearLayoutStyle">

        <ImageView
            android:id="@+id/restaurantImage"
            style="@style/detailImageStyle" />

        <TextView
            android:id="@+id/restaurantName"
            style="@style/detailNameStyle"
            android:text="@string/restaurant_name" />

        <TextView
            android:id="@+id/restaurantLocation"
            style="@style/detailLocationStyle"
            android:text="@string/restaurant_location" />

        <TextView
            android:id="@+id/restaurantTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/restaurant_time"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/aboutRestaurant"
            style="@style/detailAboutStyle"
            android:text="@string/about_restaurant" />
    </LinearLayout>
</ScrollView>
